# fidelis

./: .cogito.example.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PENDING-PAPER.md  PENDING-PAPER2.md  README.md  STATUS.md  TODO.md  agents.md  docker-compose.yml  llms.txt  pyproject.toml
.github/workflows/: ci.yml
Formula/: fidelis.rb
bench/: IMPROVEMENT-COMPARISON.md  LAUNCH-FRAMING.md  METHODOLOGY.md  MULTIQUERY-ANALYSIS.md  R&D-PLAN-2026-04-15.md  REGRADE_README.md  RESULTS-SUMMARY.md  REVIEW-QUEUE.md  ROADMAP-95-v2.md  ROADMAP-95.md  analysis-pipeline-2026-04-15.json  analyze_pipeline.py  benchmark.py  cases.json  diff_runs.py  eval.py  eval_cases.json  hardset.json  longmemeval_combined.py  longmemeval_combined_pipeline.py  longmemeval_combined_pipeline_dates.py  longmemeval_combined_pipeline_flagship.py  longmemeval_combined_pipeline_guard.py  longmemeval_combined_pipeline_v35.py  longmemeval_combined_verify.py  longmemeval_full_pipeline.py  longmemeval_hybrid.py  longmemeval_multiquery.py  longmemeval_prefix.py  longmemeval_retrieval.py  longmemeval_tuned.py  longmemeval_turnlevel.py  qa_eval.py  qa_eval_runJ-v33.json  qa_eval_v2_runP-v35_qwen-max_top5_regraded.json  qa_eval_v3_routing.py  regrade_qa.py  results-2026-04-15.json  results-combined-2026-04-15.json  results-fixed-2026-04-15.json  (+11 more)
bench/phase-0/: LEARNINGS.md
bench/phase-2/: build_hardset.py  learned_router.pkl  learned_router.py  retriever_contribution.json  retriever_contribution.md  retriever_contribution.py  retriever_contribution_logged.py  run_learned_router.sh
bench/phase-4/: TEMPORAL_SCAFFOLD_DESIGN.md  temporal_scaffold.py
bench/phase-6/: FLAGSHIP_DESIGN.md  flagship_escalation.py
docs/: RELEASE-SCOPE.md
experiments/: DECISIONS.md  FINAL-REPORT-TEMPLATE.md
experiments/E0-baseline/: compute_baseline.py  receipt.json  receipt.md
experiments/E2a-tr-ablation/: qa_eval_v3_E2a_runP-v35.json  qa_eval_v3_E2a_runP-v35_receipt.json  qa_eval_v3_E2a_runP-v35_summary.json  receipt.md
experiments/E5-final/: PLAN.md
experiments/zeroLLM-FLAGSHIP-evidence/: SUMMARY.json
src/cogito/: __init__.py  calibrate.py  cli.py  config.py  recall.py  recall_b.py  scaffold_server.py  seed.py  server.py  (+1 more)
tests/: test_broken_pipe_recovery.py  test_dead_letter.py  test_graceful_degrade.py  test_graceful_degrade_corruption.py  test_graceful_shutdown.py  test_init_plist_contents.py  test_p0_score_bypass.py  test_recall_hybrid.py  test_session_memory.py  test_smoke.py  test_telemetry.py  test_telemetry_kill_actually_kills.py  test_watch_backpressure.py  test_zero_llm_regression.py
(+47 files in other folders)
